Implement /currencies endpoint
